third_party/move/move-compiler-v2/tests/more-v1/parser/vector_literal_unclosed_args.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/vector_literal_unclosed_args.move:5:5
  │
5 │     }
  │     ^
  │     │
  │     Unexpected '}'
  │     Expected an expression term
